--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
+        <div class="error" hidden></div>
         <h2>Compose Tweet</h2>
         <form action="/tweets">
           <label for="tweet-text">What are you humming about?</label>
