code cleanup and README

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,11 +17,11 @@
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/reset.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -37,7 +39,7 @@
       <span class="logo">tweeter</span>
       <div class="navTweet">
         <p><strong>Write</strong> a new tweet</p>
-        <i class="fas fa-angle-double-down"></i>
+        <i class="fas fa-angle-double-down tweet-icon"></i>
       </div>
     </nav>
     <!-- Header -->
@@ -55,10 +57,8 @@
     <main class="container">
       <section class="new-tweet">
         <div class="error" hidden></div>
-        <h2>Compose Tweet</h2>
         <form action="/tweets">
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+          <textarea name="text" id="tweet-text" placeholder='What are you humming about?' rows=1></textarea>
           <div class="tweetFooter">
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
@@ -66,7 +66,6 @@
         </form>
       </section>
       <section class="tweets">
-        
       </section>
     </main>
   </body>
